delete and recover on pages

--- a/public/themes/cms/default/css/palette.css
+++ b/public/themes/cms/default/css/palette.css
@@ -341,6 +341,11 @@ th, td {
     margin-bottom: 20px;
 }
 
+.page-toolbar .kb-col-12 {
+    display: flex;
+    gap: 15px;
+}
+
 .box textarea {
     min-height: 400px;
 }
