--- a/public/themes/cms/default/css/palette.css
+++ b/public/themes/cms/default/css/palette.css
@@ -45,6 +45,27 @@ a:focus, a:active {
     border: 0;
 }
 
+.badge {
+    display: inline-block;
+    padding: 0.35em 0.65em;
+    font-size: 0.75em;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.375em;
+}
+
+.rounded-pill {
+    border-radius: 50rem !important;
+}
+
+.bg-danger {
+    background-color: rgb(220, 53, 69);
+}
+
 .btn-icon {
     background: none;
     border: none;
@@ -67,6 +88,12 @@ a:focus, a:active {
     flex: 0 0 auto;
     width: 100%;
     white-space: nowrap;
+}
+
+.btn-icon .badge {
+    transform: translate(-50%,-50%) !important;
+    position: absolute !important;
+    width: auto !important;
 }
 
 .no-link:hover {
@@ -239,6 +266,7 @@ main {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    margin-top: 50px;
     padding-bottom: 60px;
     flex-direction: column;
 }
@@ -362,6 +390,7 @@ th, td {
 
 .box-header {
     display: flex;
+    flex-direction: row;
     flex: 1;
     gap: 5px;
     padding: 20px;
@@ -406,7 +435,7 @@ th, td {
     flex: 1;
 }
 
-.box-footer div {
+.box-footer div, .box-header div {
     width: 50%;
 }
 
@@ -415,6 +444,18 @@ th, td {
     flex-direction: row;
     justify-content: flex-end;
     gap: 15px;
+}
+
+#toolbar {
+    width: calc(100% - 260px);
+    display: flex;
+    position: fixed;
+    top: 0;
+    background-color: #fff;
+    border-bottom:1px solid #111;
+    border-left:1px solid #111;
+    padding: 10px 10px;
+    gap: 10px;
 }
 
 @media only screen and (max-width: 1024px) {
